--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/suyaoyong/gpt-web-app#readme",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "concurrently": "^6.5.1"
