--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-    "start-frontend": "cd frontend && npm start",
-    "start-backend": "cd backend && node server.js"
+    "start-frontend": "webpack serve --mode development",
+    "start-backend": "cd backend && node server.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,16 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "concurrently": "^6.5.1"
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "concurrently": "^6.5.1",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   }
 }
